rust/node-execute/src/snapshots/md_articles@code-relations.md-topological.snap
---
source: rust/node-execute/src/lib.rs
expression: "&topological"
input_file: fixtures/articles/code-relations.md

---
{
  "options": {
    "ordering": "Topological",
    "max_concurrency": 5
  },
  "stages": [
    {
      "steps": [
        {
          "node": {
            "path": "articles/code-relations.md",
            "id": "cc-1",
            "kind": "CodeChunk",
            "language": "Calc"
          },
          "kernel": "calc",
          "forkable": false
        }
      ]
    },
    {
      "steps": [
        {
          "node": {
            "path": "articles/code-relations.md",
            "id": "pa-1",
            "kind": "Parameter",
            "language": "Calc"
          },
          "kernel": "calc",
          "forkable": false
        }
      ]
    },
    {
      "steps": [
        {
          "node": {
            "path": "articles/code-relations.md",
            "id": "cc-2",
            "kind": "CodeChunk",
            "language": "Calc"
          },
          "kernel": "calc",
          "forkable": false
        }
      ]
    },
    {
      "steps": [
        {
          "node": {
            "path": "articles/code-relations.md",
            "id": "ce-1",
            "kind": "CodeExpression",
            "language": "Calc"
          },
          "kernel": "calc",
          "forkable": false
        }
      ]
    },
    {
      "steps": [
        {
          "node": {
            "path": "articles/code-relations.md",
            "id": "ce-2",
            "kind": "CodeExpression",
            "language": "Calc"
          },
          "kernel": "calc",
          "forkable": false
        }
      ]
    },
    {
      "steps": [
        {
          "node": {
            "path": "articles/code-relations.md",
            "id": "cc-3",
            "kind": "CodeChunk",
            "language": "Calc"
          },
          "kernel": "calc",
          "forkable": false
        }
      ]
    },
    {
      "steps": [
        {
          "node": {
            "path": "articles/code-relations.md",
            "id": "ce-3",
            "kind": "CodeExpression",
            "language": "Calc"
          },
          "kernel": "calc",
          "forkable": false
        }
      ]
    },
    {
      "steps": [
        {
          "node": {
            "path": "articles/code-relations.md",
            "id": "ce-4",
            "kind": "CodeExpression",
            "language": "Calc"
          },
          "kernel": "calc",
          "forkable": false
        }
      ]
    },
    {
      "steps": [
        {
          "node": {
            "path": "articles/code-relations.md",
            "id": "cc-4",
            "kind": "CodeChunk",
            "language": "Calc"
          },
          "kernel": "calc",
          "forkable": false
        }
      ]
    }
  ]
}
