rust/node-execute/src/snapshots/md_articles@code.md-appearance-concurrency-0.snap
---
source: rust/node-execute/src/lib.rs
expression: "&plan"

---
{
  "options": {
    "ordering": "Appearance",
    "max_concurrency": 0
  },
  "stages": []
}
