rust/node-execute/src/snapshots/md_articles@code.md-appearance.snap
---
source: rust/node-execute/src/lib.rs
expression: "&plan"
input_file: fixtures/articles/code.md

---
{
  "options": {
    "ordering": "Appearance",
    "max_concurrency": 10
  },
  "stages": []
}
