rust/node-execute/src/snapshots/md_articles@code.md-compile.snap
---
source: rust/node-execute/src/lib.rs
expression: "(&addresses, &relations)"
input_file: fixtures/articles/code.md

---
[
  {
    "cb-1": [
      "content",
      9
    ],
    "cc-1": [
      "content",
      7
    ],
    "ce-1": [
      "content",
      2,
      "content",
      3
    ],
    "ce-2": [
      "content",
      2,
      "content",
      5
    ],
    "ce-3": [
      "content",
      2,
      "content",
      7
    ],
    "ce-4": [
      "content",
      3,
      "content",
      1
    ],
    "ce-5": [
      "content",
      3,
      "content",
      3
    ],
    "cf-1": [
      "content",
      0,
      "content",
      1
    ],
    "cf-2": [
      "content",
      0,
      "content",
      3
    ],
    "cf-3": [
      "content",
      0,
      "content",
      5
    ],
    "cf-4": [
      "content",
      0,
      "content",
      7
    ],
    "cf-5": [
      "content",
      2,
      "content",
      1
    ],
    "cf-6": [
      "content",
      4,
      "content",
      1
    ],
    "cf-7": [
      "content",
      4,
      "content",
      3
    ],
    "cf-8": [
      "content",
      6,
      "content",
      1
    ],
    "cf-9": [
      "content",
      8,
      "content",
      1
    ]
  },
  [
    [
      {
        "type": "Node",
        "path": "articles/code.md",
        "id": "ce-1",
        "kind": "CodeExpression"
      },
      []
    ],
    [
      {
        "type": "Node",
        "path": "articles/code.md",
        "id": "ce-2",
        "kind": "CodeExpression"
      },
      []
    ],
    [
      {
        "type": "Node",
        "path": "articles/code.md",
        "id": "ce-3",
        "kind": "CodeExpression"
      },
      []
    ],
    [
      {
        "type": "Node",
        "path": "articles/code.md",
        "id": "ce-4",
        "kind": "CodeExpression"
      },
      []
    ],
    [
      {
        "type": "Node",
        "path": "articles/code.md",
        "id": "ce-5",
        "kind": "CodeExpression"
      },
      []
    ],
    [
      {
        "type": "Node",
        "path": "articles/code.md",
        "id": "cc-1",
        "kind": "CodeChunk"
      },
      []
    ]
  ]
]
