rust/node-execute/src/snapshots/md_articles@code.md-plan.snap
---
source: rust/node-execute/src/lib.rs
expression: "&plan"
input_file: fixtures/articles/code.md

---
{
  "order": []
}
