rust/node-execute/src/snapshots/md_articles@code.md-planner.snap
---
source: rust/node-execute/src/lib.rs
expression: "&planner"
input_file: fixtures/articles/code.md

---
{
  "resources": {
    "code://articles/code.md#cc-1": {
      "type": "Code",
      "path": "articles/code.md",
      "id": "cc-1",
      "kind": "CodeChunk",
      "language": "R"
    },
    "code://articles/code.md#ce-1": {
      "type": "Code",
      "path": "articles/code.md",
      "id": "ce-1",
      "kind": "CodeExpression",
      "language": "R"
    },
    "code://articles/code.md#ce-2": {
      "type": "Code",
      "path": "articles/code.md",
      "id": "ce-2",
      "kind": "CodeExpression",
      "language": "Python"
    },
    "code://articles/code.md#ce-3": {
      "type": "Code",
      "path": "articles/code.md",
      "id": "ce-3",
      "kind": "CodeExpression",
      "language": "Python"
    },
    "code://articles/code.md#ce-4": {
      "type": "Code",
      "path": "articles/code.md",
      "id": "ce-4",
      "kind": "CodeExpression",
      "language": "Python"
    },
    "code://articles/code.md#ce-5": {
      "type": "Code",
      "path": "articles/code.md",
      "id": "ce-5",
      "kind": "CodeExpression",
      "language": "Python"
    }
  },
  "appearance_order": [
    "code://articles/code.md#ce-1",
    "code://articles/code.md#ce-2",
    "code://articles/code.md#ce-3",
    "code://articles/code.md#ce-4",
    "code://articles/code.md#ce-5",
    "code://articles/code.md#cc-1"
  ],
  "topological_order": [
    {
      "id": "code://articles/code.md#ce-1",
      "dependencies": [],
      "depth": 0
    },
    {
      "id": "code://articles/code.md#ce-2",
      "dependencies": [],
      "depth": 0
    },
    {
      "id": "code://articles/code.md#ce-3",
      "dependencies": [],
      "depth": 0
    },
    {
      "id": "code://articles/code.md#ce-4",
      "dependencies": [],
      "depth": 0
    },
    {
      "id": "code://articles/code.md#ce-5",
      "dependencies": [],
      "depth": 0
    },
    {
      "id": "code://articles/code.md#cc-1",
      "dependencies": [],
      "depth": 0
    }
  ],
  "kernels": [
    {
      "name": "store",
      "type": "Builtin",
      "languages": [],
      "forkable": false
    },
    {
      "name": "calc",
      "type": "Builtin",
      "languages": [
        "calc"
      ],
      "forkable": true
    }
  ]
}
