rust/node-execute/src/snapshots/md_articles@code.md-topological-concurrency-0.snap
---
source: rust/node-execute/src/lib.rs
expression: "&plan"

---
{
  "options": {
    "ordering": "Topological",
    "max_concurrency": 0
  },
  "stages": []
}
